UPDATE: change atomic to combine
